fix z-index for mobile menu

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -126,7 +126,7 @@
     left: 50%;
     transform: translateX(-50%) scaleY(0);
     transform-origin: top;
-    z-index: 9;
+    z-index: 99;
     display: flex;
     flex-direction: column;
     gap: 32px;
